# Buzzy

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CLAUDE.md  README.md  TASKS.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  turbo.json
.cursor/rules/: cursor-rules.md
.github/workflows/: ci.yml
apps/: tsconfig.json
apps/admin/: README.md  next.config.mjs  next.config.ts  package.json  tsconfig.json
apps/api/: README.md  package.json
apps/api/src/: index.ts  logger.ts
apps/mobile/: README.md  app.json  package.json  tsconfig.json
apps/web/: README.md  next.config.mjs  package.json  tsconfig.json
config/: categories.json  cron-schedules.json  summarization.json
docs/: api-contracts.md  architecture.md  data-model.md  glossary.md  performance-benchmarks.md  runbooks.md
docs/requirements/: Article Sourcing & Summarization System - MAIN - Article Summaries.csv  BUZZY MVVVP 1-13-2026.md  Buzzy Categories Master - Top Level Categories.csv  Buzzy Today Milestone Acceptance Criteria.md  buzzy-execution-plan.md
infrastructure/firebase/: .firebaserc  firebase.json
services/: README.md  requirements.txt
services/ingestion/: README.md  requirements.txt
services/ingestion/src/: __init__.py  categorizer.py  config.py  dedup.py  demand_filter.py  image_selector.py  knockout.py  logging_config.py  normalizer.py  pipeline.py  rss_reader.py  tag_suggester.py
services/notifications/: README.md  package.json
services/scheduler/: README.md  package.json
services/summarization/: README.md  requirements.txt
(+125 files in other folders)
