[project]
name = "buzzy-services"
version = "0.1.0"
description = "Shared Python tooling and configuration for Buzzy ingestion and summarization services."
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | node_modules
)/
'''

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["services"]
python_files = ["test_*.py", "*_test.py"]

